Fix large fonts on mobile safari.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,9 @@ body.dark-mode {
 body:not(.dark-mode-preloading) {
   transition: all 1s linear;
 }
+
+@media screen and (max-device-width: 480px) {
+  body {
+    -webkit-text-size-adjust: 100%;
+  }
+}
